--- a/MywebApp/pom.xml
+++ b/MywebApp/pom.xml
@@ -17,6 +17,14 @@
   </dependencies>
   <build>
     <finalName>MywebApp</finalName>
-    
+    <plugin> 
+      <groupId>org.apache.maven.plugins</groupId> 
+       <artifactId>maven-compiler-plugin</artifactId> 
+      <version>3.5.1</version> 
+      <configuration>
+        <source>1.8</source> 
+        <target>1.8</target> 
+      </configuration> 
+    </plugin>
   </build>
 </project>
