--- a/MywebApp/pom.xml
+++ b/MywebApp/pom.xml
@@ -17,6 +17,7 @@
   </dependencies>
   <build>
     <finalName>MywebApp</finalName>
+  <plugins>
     <plugin> 
       <groupId>org.apache.maven.plugins</groupId> 
        <artifactId>maven-compiler-plugin</artifactId> 
@@ -26,5 +27,6 @@
         <target>1.8</target> 
       </configuration> 
     </plugin>
+  </plugins>
   </build>
 </project>
